Change name token to token secret

--- a/create_debian_vm.yml
+++ b/create_debian_vm.yml
@@ -12,7 +12,7 @@
     proxmox_host: "{{ lookup('env', 'PROXMOX_IP') }}"
     api_user: "{{ lookup('env', 'PROXMOX_API_USER') }}"
     api_token_id: "{{ lookup('env', 'PROXMOX_API_TOKEN_ID') }}"
-    api_token: "{{ lookup('env', 'PROXMOX_API_TOKEN') }}"
+    api_token_secret: "{{ lookup('env', 'PROXMOX_API_TOKEN_SECRET') }}"
     ssh_pub_key: "{{ lookup('env', 'SSH_PUB_KEY') }}"
     ci_user: "{{ lookup('env', 'CI_USER') }}"
     ci_pass: "{{ lookup('env', 'CI_PASS') }}"
@@ -23,7 +23,7 @@
         api_host: "{{ proxmox_host }}"
         api_user: "{{ api_user }}"
         api_token_id: "{{ api_token_id }}"
-        token: "{{ api_token }}"
+        api_token_secret: "{{ api_token_secret }}"
         node: "{{ proxmox_node }}"
         vmid: "{{ vm_id }}"
         clone: "{{ template_vm_id }}"
