--- a/create_debian_vm.yml
+++ b/create_debian_vm.yml
@@ -26,7 +26,7 @@
         api_token_secret: "{{ api_token_secret }}"
         node: "{{ proxmox_node }}"
         vmid: "{{ vm_id }}"
-        clone: "{{ template_vm_id }}"
+        clone: "{{ template_vm_id | int }}"
         name: "{{ vm_name }}"
         storage: "{{ storage }}"
         memory: 1024
