--- a/create_debian_vm.yml
+++ b/create_debian_vm.yml
@@ -11,18 +11,21 @@
     target_disk_size: 10G
     proxmox_host: "{{ lookup('env', 'PROXMOX_IP') }}"
     api_user: "{{ lookup('env', 'PROXMOX_API_USER') }}"
+    api_password: "{{ lookup('env', 'PROXMOX_API_PASSWORD') }}"
     api_token_id: "{{ lookup('env', 'PROXMOX_API_TOKEN_ID') }}"
     api_token_secret: "{{ lookup('env', 'PROXMOX_API_TOKEN_SECRET') }}"
     ssh_pub_key: "{{ lookup('env', 'SSH_PUB_KEY') }}"
     ci_user: "{{ lookup('env', 'CI_USER') }}"
     ci_pass: "{{ lookup('env', 'CI_PASS') }}"
+    
 
   tasks:
     - name: Clone from Debian cloud-init template
       community.general.proxmox:
         api_host: "{{ proxmox_host }}"
-        api_token_id: "{{ api_token_id }}"
-        api_token_secret: "{{ api_token_secret }}"
+        api_password: "{{ api_password }}"
+        # api_token_id: "{{ api_token_id }}"
+        # api_token_secret: "{{ api_token_secret }}"
         api_user: "{{ api_user }}"
         clone: "{{ template_vm_id }}"
         cores: 1
