--- a/create_debian_vm.yml
+++ b/create_debian_vm.yml
@@ -38,7 +38,7 @@
         state: started
         timeout: 60
 
-    - name: Fail script if VM already exists
-      fail:
-        msg: "The VM with id {{ vm.id }} already exists"
-      when: result.rc == 0
+    # - name: Fail script if VM already exists
+    #   fail:
+    #     msg: "The VM with id {{ vm.id }} already exists"
+    #   when: result.rc == 0
