--- a/create_debian_vm.yml
+++ b/create_debian_vm.yml
@@ -21,24 +21,31 @@
 
   tasks:
     - name: Clone from Debian cloud-init template
-      community.general.proxmox:
+      community.general.proxmox_kvm:
         api_host: "{{ proxmox_host }}"
+        api_user: "{{ api_user }}"
         api_password: "{{ api_password }}"
         # api_token_id: "{{ api_token_id }}"
         # api_token_secret: "{{ api_token_secret }}"
-        api_user: "{{ api_user }}"
-        clone: "{{ template_vm_id }}"
-        cores: 1
-        disk_volume:
-          storage: "{{ storage }}"
-          size: 20
-        force: true
-        memory: 1024
         node: "{{ proxmox_node }}"
-        state: started
+        clone: "{{ template_vm_id }}"
+        name: "{{ vm_name }}"
+        vmid: "{{ vm_id }}"
+        memory: 1024
+        cores: 1
+        ide:
+          ide0: 'local:cloudinit,format=qcow2'
+        net:
+          net0: 'virtio,bridge=vmbr0'
+        sata:
+          sata0: 'HDD-TAFF1:10,format=raw'
+        efidisk0:
+          storage: HDD-TAFF1
+          format: raw
+          efitype: 4m
+          pre_enrolled_keys: 1
+        ciuser: "{{ ci_user }}"
+        cipassword: "{{ ci_pass }}"
+        sshkeys: "{{ ssh_pub_key }}"
         timeout: 60
-
-    # - name: Fail script if VM already exists
-    #   fail:
-    #     msg: "The VM with id {{ vm.id }} already exists"
-    #   when: result.rc == 0
+        state: present
