--- a/create_debian_vm.yml
+++ b/create_debian_vm.yml
@@ -32,18 +32,13 @@
         name: "{{ vm_name }}"
         memory: 1024
         cores: 1
-        bios: ovmf
         ide:
           ide0: 'local:cloudinit,format=qcow2'
         net:
           net0: 'virtio,bridge=vmbr0'
-        sata:
-          sata0: 'HDD-TAFF1:10,format=raw'
-        efidisk0:
-          storage: HDD-TAFF1
-          format: raw
-          efitype: 4m
-          pre_enrolled_keys: false
+        scsi:
+          scsi0: 'HDD-TAFF1:10,format=raw'
+        scsihw: virtio-scsi-single
         ciuser: "{{ ci_user }}"
         cipassword: "{{ ci_pass }}"
         sshkeys: "{{ ssh_pub_key }}"
